--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,7 +5,7 @@
 
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
+  padding:  1rem 0 4rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
