--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  background: linear-gradient(135deg, #f8cdda 0%, #f1f4ff 100%);
+  background: linear-gradient(135deg, #ffffff 0%, #737bd3 100%);
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
